--- a/Group20/src/main/resources/application.properties
+++ b/Group20/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=9001
 
+# Database properties
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/trello
+spring.datasource.username=csci3130_group20
+spring.datasource.password=cahtoc2Yai
