--- a/Group20/pom.xml
+++ b/Group20/pom.xml
@@ -39,6 +39,18 @@
 			<version>8.0.29</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.12.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
