--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,20 @@
-stages:
-    -build
-    -test
+stages :
+     - build
+     - test
 
-build:
-    stage: build
-    tags: 
-        - ugrad
-    script:
-        -cd Group20
-        -mvn clean package -DskipTests=true
+build-job:
+     stage: build
+     tags:
+         - ugrad
+     script:
+         -cd Group20
+         -mvn clean package -DskipTests
 
-test:
+test-job:
     stage: test
     tags:
-        - ugrad
+        -ugrad
     script:
         -cd Group20
-        -mvn clean verify
+        -mvn clean verify      
 
