--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 build-job :
      stage: build
      tags:
-         - ugrad
+         - grad
      script:
          - cd Group20
          - mvn clean package -DskipTests = True
@@ -13,7 +13,7 @@ build-job :
 test-job:
     stage: test
     tags:
-         - ugrad
+         - grad
     script:
         - cd Group20
         - mvn clean verify      
