--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 build-job :
      stage: build
      tags:
-         - grad
+         - ugrad
      script:
          - cd Group20
          - mvn clean package -DskipTests
@@ -13,7 +13,7 @@ build-job :
 test-job:
     stage: test
     tags:
-         - grad
+         - ugrad
     script:
         - cd Group20
         - mvn clean verify      
