--- a/trello-clone/package.json
+++ b/trello-clone/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -16,7 +17,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "react-select": "^5.4.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
